# total-screen-time

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
android_screentime_skeleton/: README.md  local.properties  settings.gradle.kts
android_screentime_skeleton/app/: build.gradle.kts
android_screentime_skeleton/app/src/main/: AndroidManifest.xml
android_screentime_skeleton/app/src/main/java/com/example/screentime/: AppConfig.kt
android_screentime_skeleton/app/src/main/java/com/example/screentime/data/: AppDatabase.kt  IntervalDao.kt  IntervalEntity.kt  IntervalRepository.kt
android_screentime_skeleton/app/src/main/java/com/example/screentime/receiver/: BootReceiver.kt
android_screentime_skeleton/app/src/main/java/com/example/screentime/sync/: ApiModels.kt  SyncClient.kt  SyncWorker.kt
android_screentime_skeleton/app/src/main/java/com/example/screentime/tracker/: ScreenEventReceiver.kt  ScreenTrackerService.kt  TrackerState.kt
android_screentime_skeleton/app/src/main/java/com/example/screentime/ui/: MainActivity.kt
android_screentime_skeleton/app/src/main/java/com/example/screentime/util/: TimeUtils.kt  (+1 more)
android_screentime_skeleton/app/src/main/res/layout/: activity_main.xml
android_screentime_skeleton/app/src/main/res/values/: strings.xml  themes.xml
scripts/: build_server_image.sh  install_client.sh  run_server_container.sh  stop_server_container.sh  uninstall_client.sh
src/screentime/server/: app.py  db.py  schemas.py
src/screentime/ubuntu/: monitor.py  schema.py  store.py  sync.py  tracker.py
systemd/: screentime.service
